# basics_of_programming_repo

./: .gitignore  CMakeLists.txt  README.md  codeforces.id
pr.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_rational.cpp
prj.codeforces/: .py  0004a.cpp  0059a.cpp  0069a.cpp  0071a.cpp  0096a.cpp  0112a.cpp  0136b.cpp  0158a.cpp  0231a.cpp  0263a.cpp  0271a.cpp  0339b.cpp  0617a.cpp  0731a.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  1404a.cpp  1512b.cpp  1512c.cpp  1559a.cpp  1649a.cpp  1669d.cpp  1670b.cpp  1690d.cpp  1717b.cpp  1721b.cpp  1734b.cpp  1855a.cpp  1857a.cpp  1859a.cpp  1861a.cpp  1872a.cpp  1873a.cpp  1873c.cpp  1873d.cpp  1875a.cpp  1877a.cpp  (+3 more)
prj.lab/: CMakeLists.txt  complex-sample.cpp  complex-test-edition.cpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
